--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "3"
 services:
   nats:
-    image: nats
+    image: nats-streaming
     ports:
       - 4222:4222
+      - 6222:6222
+      - 8222:8222
