--- a/ChatServer/ChatServer.csproj
+++ b/ChatServer/ChatServer.csproj
@@ -1,7 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,18 +13,14 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NATS.Client" Version="0.11.0" />
-    <PackageReference Include="ValhallaWebSockets" Version="0.0.6" />
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="..\protos\common.proto" GrpcServices="None" Access="Internal">
+    <Protobuf Include="..\protos\chat.proto" GrpcServices="None" Access="Internal">
+      <Link>Protos\chat.proto</Link>
+    </Protobuf>
+    <Protobuf Include="..\protos\common.proto" Access="Internal" GrpcServices="None">
       <Link>Protos\common.proto</Link>
-    </Protobuf>
-    <Protobuf Include="..\protos\connector.proto" GrpcServices="None" Access="Internal">
-      <Link>Protos\connector.proto</Link>
-    </Protobuf>
-    <Protobuf Include="..\protos\session.proto" GrpcServices="None" Access="Internal">
-      <Link>Protos\session.proto</Link>
     </Protobuf>
   </ItemGroup>
 
