--- a/SessionServer/SessionServer.csproj
+++ b/SessionServer/SessionServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -25,6 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Protobuf Include="..\protos\chat.proto" Access="Internal" GrpcServices="None">
+      <Link>Protos\chat.proto</Link>
+    </Protobuf>
     <Protobuf Include="..\protos\session.proto" Access="Internal" GrpcServices="None">
       <Link>Protos\session.proto</Link>
     </Protobuf>
