重構程式， 抽出共用界面ICommandService、IQueryService、IGetService， 將NATs存取元件抽出到共用

--- a/ChatConnector/ChatConnector.csproj
+++ b/ChatConnector/ChatConnector.csproj
@@ -16,7 +16,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.1" />
-    <PackageReference Include="NATS.Client" Version="0.11.0" />
     <PackageReference Include="ValhallaWebSockets" Version="0.0.6" />
   </ItemGroup>
 
@@ -46,6 +45,10 @@
     <Folder Include="wwwroot\lib\jquery-validation\dist\" />
     <Folder Include="wwwroot\lib\jquery\" />
     <Folder Include="wwwroot\lib\jquery\dist\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
 </Project>
