實現進房、離房邏輯

--- a/ChatConnector/ChatConnector.csproj
+++ b/ChatConnector/ChatConnector.csproj
@@ -5,10 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Protos\room.proto" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.14.0" />
     <PackageReference Include="Grpc.Tools" Version="2.34.0">
       <PrivateAssets>all</PrivateAssets>
@@ -26,10 +22,12 @@
     <Protobuf Include="..\protos\connector.proto" GrpcServices="None" Access="Internal">
       <Link>Protos\connector.proto</Link>
     </Protobuf>
+    <Protobuf Include="..\protos\room.proto" GrpcServices="None" Access="Internal">
+      <Link>Protos\room.proto</Link>
+    </Protobuf>
     <Protobuf Include="..\protos\session.proto" GrpcServices="None" Access="Internal">
       <Link>Protos\session.proto</Link>
     </Protobuf>
-    <Protobuf Include="Protos\room.proto" GrpcServices="None" Access="Internal" />
   </ItemGroup>
 
   <ItemGroup>
