完成chat 1對1 傳送訊息

--- a/ChatServer/ChatServer.csproj
+++ b/ChatServer/ChatServer.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,10 +36,6 @@
     <Protobuf Include="..\protos\session.proto" GrpcServices="None" Access="Internal">
       <Link>Protos\session.proto</Link>
     </Protobuf>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
