--- a/ChatConnector/ChatConnector.csproj
+++ b/ChatConnector/ChatConnector.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <StartupObject>ChatConnector.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
