--- a/ChatServer/ChatServer.csproj
+++ b/ChatServer/ChatServer.csproj
@@ -1,44 +1,55 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net5.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<UserSecretsId>60348c38-0c5e-4d60-abb4-a33e5f083c67</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerfileBuildArguments>--build-arg "BuildConfiguration=$(Configuration)"</DockerfileBuildArguments>
+		<DockerfileTag Condition="$(DockerfileTag) == ''">chat/chat</DockerfileTag>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="Models\MessageQueueService.cs" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="Models\MessageQueueService.cs" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.14.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.34.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Google.Protobuf" Version="3.14.0" />
+		<PackageReference Include="Grpc.Tools" Version="2.34.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+		<PackageReference Include="System.Linq.Async" Version="5.0.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Common\Common.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Protobuf Include="..\protos\chat.proto">
-      <Link>Protos\chat.proto</Link>
-    </Protobuf>
-    <Protobuf Include="..\protos\client.proto">
-      <Link>Protos\client.proto</Link>
-    </Protobuf>
-    <Protobuf Include="..\protos\common.proto" Access="Internal" GrpcServices="None">
-      <Link>Protos\common.proto</Link>
-    </Protobuf>
-    <Protobuf Include="..\protos\room.proto" GrpcServices="None" Access="Internal">
-      <Link>Protos\room.proto</Link>
-    </Protobuf>
-    <Protobuf Include="..\protos\session.proto" GrpcServices="None" Access="Internal">
-      <Link>Protos\session.proto</Link>
-    </Protobuf>
-  </ItemGroup>
+	<ItemGroup>
+		<Protobuf Include="..\protos\chat.proto">
+			<Link>Protos\chat.proto</Link>
+		</Protobuf>
+		<Protobuf Include="..\protos\client.proto">
+			<Link>Protos\client.proto</Link>
+		</Protobuf>
+		<Protobuf Include="..\protos\common.proto" Access="Internal" GrpcServices="None">
+			<Link>Protos\common.proto</Link>
+		</Protobuf>
+		<Protobuf Include="..\protos\room.proto" GrpcServices="None" Access="Internal">
+			<Link>Protos\room.proto</Link>
+		</Protobuf>
+		<Protobuf Include="..\protos\session.proto" GrpcServices="None" Access="Internal">
+			<Link>Protos\session.proto</Link>
+		</Protobuf>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="..\.dockerignore">
+	    <DependentUpon>dockerfile</DependentUpon>
+	  </None>
+	</ItemGroup>
 
 </Project>
