--- a/RoomServer/RoomServer.csproj
+++ b/RoomServer/RoomServer.csproj
@@ -1,40 +1,51 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net5.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<UserSecretsId>bfd9e64d-8053-4adb-b526-26ac20fb2949</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerfileBuildArguments>--build-arg "BuildConfiguration=$(Configuration)"</DockerfileBuildArguments>
+		<DockerfileTag Condition="$(DockerfileTag) == ''">chat/room</DockerfileTag>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Protos\.gitkeep" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="Protos\.gitkeep" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Protobuf Include="..\protos\client.proto">
-      <Link>Protos\client.proto</Link>
-    </Protobuf>
-    <Protobuf Include="..\protos\common.proto">
-      <Link>Protos\common.proto</Link>
-    </Protobuf>
-    <Protobuf Include="..\protos\room.proto" Link="Protos\room.proto" GrpcServices="None" Access="Internal" />
-    <Protobuf Include="..\protos\session.proto">
-      <Link>Protos\session.proto</Link>
-    </Protobuf>
-  </ItemGroup>
+	<ItemGroup>
+		<Protobuf Include="..\protos\client.proto">
+			<Link>Protos\client.proto</Link>
+		</Protobuf>
+		<Protobuf Include="..\protos\common.proto">
+			<Link>Protos\common.proto</Link>
+		</Protobuf>
+		<Protobuf Include="..\protos\room.proto" Link="Protos\room.proto" GrpcServices="None" Access="Internal" />
+		<Protobuf Include="..\protos\session.proto">
+			<Link>Protos\session.proto</Link>
+		</Protobuf>
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.14.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.34.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
-    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Google.Protobuf" Version="3.14.0" />
+		<PackageReference Include="Grpc.Tools" Version="2.34.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+		<PackageReference Include="StackExchange.Redis" Version="2.2.4" />
+		<PackageReference Include="System.Linq.Async" Version="5.0.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Common\Common.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Update="..\.dockerignore">
+			<DependentUpon>dockerfile</DependentUpon>
+		</None>
+	</ItemGroup>
 
 </Project>
