--- a/RoomServer/appsettings.json
+++ b/RoomServer/appsettings.json
@@ -1,9 +1,6 @@
 {
-	"Auth": {
-		"Authority": "https://localhost:17001"
-	},
-	"MessageQueue": {
-		"Url": "nats://localhost:4222"
+	"Redis": {
+		"ConnectionString": "localhost:6379"
 	},
 	"Logging": {
 		"LogLevel": {
@@ -11,6 +8,5 @@
 			"Microsoft": "Warning",
 			"Microsoft.Hosting.Lifetime": "Information"
 		}
-	},
-	"AllowedHosts": "*"
+	}
 }
