--- a/AuthServer/dockerfile
+++ b/AuthServer/dockerfile
@@ -1,12 +1,12 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
+ARG BuildConfiguration=Release
 FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
-ENV BuildConfiguration=Release
+ARG BuildConfiguration=Release
 WORKDIR /src
 COPY ["nuget.config", "."]
 COPY ["AuthServer/AuthServer.csproj", "AuthServer/"]
@@ -16,7 +16,7 @@ WORKDIR "/src/AuthServer"
 RUN dotnet build "AuthServer.csproj" -c ${BuildConfiguration} -o /app/build
 
 FROM build AS publish
-ENV BuildConfiguration=Release
+ARG BuildConfiguration=Release
 RUN dotnet publish "AuthServer.csproj" -c ${BuildConfiguration} -o /app/publish
 
 FROM base AS final
