--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
         run: dotnet restore
 
       - name: build auth
-        run: dotnet build -c ${{env.BuildConfiguration}} -t:ContainerBuild -p:DockerfileTag=${{env.ImageRegistry}}/chat/auth:${{env.GITHUB_RUN_NUMBER}} --no-restore AuthSever/AuthServer.csproj
+        run: dotnet build -c ${{env.BuildConfiguration}} -t:ContainerBuild -p:DockerfileTag=${{env.ImageRegistry}}/chat/auth:${{env.GITHUB_RUN_NUMBER}} --no-restore AuthServer/AuthServer.csproj
