--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,6 @@ jobs:
         run: dotnet restore
 
       - name: build auth
-        run: dotnet build -c ${{env.BuildConfiguration}} -t:ContainerBuild -p:DockerfileTag=${{env.ImageRegistry}}/chat/auth:${{env.GITHUB_ACTION}} --no-restore AuthServer/AuthServer.csproj
+        run: |
+          SET DOCKER_HOST=tcp://localhost:2376
+          dotnet build -c ${{env.BuildConfiguration}} -t:ContainerBuild -p:DockerfileTag=${{env.ImageRegistry}}/chat/auth:${{github.run_number}} --no-restore AuthServer/AuthServer.csproj
