修正在k8s裡x-forwarded沒有運作問題 調整設定，讓在k8s裡的網站可以正常顯示

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
       - 17001:7001
       - 17002:7002
       - 18404:8404
+      - 443:443
     volumes:
       - ./docker-configs/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
       - ./docker-configs/localhost.pem:/etc/ssl/live/localhost/localhost.pem:ro
+      - ./docker-configs/test.pem:/etc/ssl/live/test.com/test.com.pem:ro
