加入webclient的ci腳本 k8s部署文件初步完成 調整auth server的 xff 設定

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,3 +45,6 @@ jobs:
         run: dotnet build -c ${{env.BuildConfiguration}} -t:ContainerBuild -p:DockerfileTag=${{env.ImageRegistry}}/chat/session:${{github.run_number}} --no-restore SessionServer/SessionServer.csproj
       - name: push session image
         run: docker push ${{env.ImageRegistry}}/chat/session:${{github.run_number}}
+
+      - name: build webclient
+        run: docker build -f webClient\Dockerfile -t ${{env.ImageRegistry}}/chat/web:${{github.run_number}} webClient
