--- a/docker-configs/haproxy.cfg
+++ b/docker-configs/haproxy.cfg
@@ -30,6 +30,8 @@ frontend chat
     # use_backend web
 
 frontend k8s
+    log global
+    option httplog
     bind :443 ssl crt /etc/ssl/live/test.com/test.com.pem
 
     use_backend k8s
@@ -60,4 +62,5 @@ backend k8s
     mode http
     option forwardfor
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
-    server host 192.168.90.100:80
+
+    server host 192.168.90.100:30080
