--- a/k8s/auth/deployment.yml
+++ b/k8s/auth/deployment.yml
@@ -15,10 +15,10 @@ spec:
         app: auth
     spec:
       imagePullSecrets:
-        - name: regcred
+        - name: valhalla-cr
       containers:
         - name: auth
-          image: cr.yggdrasill.dev/chat/auth:10
+          image: cr.yggdrasill.dev/chat/auth:11
           ports:
             - containerPort: 80
           env:
