補上push webclient image 修正k8s部署沒有成功抓到image問題

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,3 +48,5 @@ jobs:
 
       - name: build webclient
         run: docker build -f webClient\Dockerfile -t ${{env.ImageRegistry}}/chat/web:${{github.run_number}} webClient
+      - name: push webclient image
+        run: docker push ${{env.ImageRegistry}}/chat/web:${{github.run_number}}
