--- a/k8s/room/deployment.yml
+++ b/k8s/room/deployment.yml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: room
     spec:
+      imagePullSecrets:
+        - name: valhalla-cr
       containers:
         - name: chat
           image: cr.yggdrasill.dev/chat/room:18
