--- a/k8s/connector/ingress.yml
+++ b/k8s/connector/ingress.yml
@@ -14,6 +14,13 @@ spec:
                 name: connector-service
                 port:
                   number: 80
+          - path: /ws
+            pathType: Prefix
+            backend:
+              service:
+                name: connector-service
+                port:
+                  number: 80
           - path: /webclient
             pathType: Prefix
             backend:
