--- a/k8s/chatsystem/templates/httpproxy-websocket.yml
+++ b/k8s/chatsystem/templates/httpproxy-websocket.yml
@@ -1,16 +1,18 @@
-# httpproxy-websockets.yaml
+{{- $fullName := include "chatsystem.fullname" . -}}
+{{- range .Values.ingress.hosts }}
+---
 apiVersion: projectcontour.io/v1
 kind: HTTPProxy
 metadata:
-  name: chat
-  namespace: default
+  name: {{ $fullName }}-{{ .host }}
 spec:
   virtualhost:
-    fqdn: chat.test.com
+    fqdn: {{ .host | quote }}
   routes:
   - conditions:
     - prefix: /ws
     enableWebsockets: true # Setting this to true enables websocket for all paths that match /websocket
     services:
-    - name: connector-service
+    - name: {{ $fullName }}-connector
       port: 80
+{{- end }}
