--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
     needs: build
     steps:
       - name: Download a build artifact
-        uses: actions/download-artifact@latest
+        uses: actions/download-artifact@v2.0.8
         with:
           name: k8s
           path: k8s
